@@ -1,3 +1,8 @@
+2001-03-12  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m.el (w3m-which-command): Support executable suffix, `.exe'
+	for win32.
+
 2001-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-content-type-alist): Add 'use fiber.exe' alist for Windows.
